[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scenes/thrishaStuff/Prefab/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/thrishaStuff/images/Dorm_Final.png" type="Texture" id=2]
[ext_resource path="res://Scenes/leoStuff/HUD/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/thrishaStuff/Scripts/Mirror.gd" type="Script" id=4]
[ext_resource path="res://Scenes/thrishaStuff/images/otherBed.png" type="Texture" id=6]
[ext_resource path="res://Scenes/thrishaStuff/Scripts/Bed.gd" type="Script" id=8]
[ext_resource path="res://Scenes/thrishaStuff/Scripts/Map.gd" type="Script" id=9]
[ext_resource path="res://Scenes/thrishaStuff/Scripts/OtherBed.gd" type="Script" id=10]
[ext_resource path="res://Scenes/thrishaStuff/Audio/Dorm/Kevin MacLeodï¼š Chill.wav" type="AudioStream" id=13]
[ext_resource path="res://Scenes/thrishaStuff/Scripts/Dorm.gd" type="Script" id=14]
[ext_resource path="res://Scenes/thrishaStuff/images/F_To_Interact.png" type="Texture" id=15]
[ext_resource path="res://Scenes/thrishaStuff/images/map_interactable.png" type="Texture" id=16]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 244, 260.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 287.75, 316.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 111.5, 214 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 74.5, 400.75 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 546.5 )

[node name="DormRoom" type="Node2D"]
position = Vector2( -1, 0 )
script = ExtResource( 14 )

[node name="Dorm" type="Sprite" parent="."]
position = Vector2( 1112.5, 540 )
texture = ExtResource( 2 )

[node name="OtherBed" type="Area2D" parent="."]
position = Vector2( 1750, 656 )
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="OtherBed"]
position = Vector2( -207, -32.5 )
shape = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="OtherBed"]
visible = false
scale = Vector2( 0.16, 0.16 )
texture = ExtResource( 6 )

[node name="QuestionMark" type="Sprite" parent="OtherBed"]
position = Vector2( -149, -279 )
texture = ExtResource( 15 )

[node name="Bed" type="Area2D" parent="."]
position = Vector2( 312, 648 )
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bed"]
position = Vector2( 10.25, -32.5 )
shape = SubResource( 5 )

[node name="QuestionMark" type="Sprite" parent="Bed"]
position = Vector2( 1, -269 )
texture = ExtResource( 15 )

[node name="Map" type="Area2D" parent="."]
position = Vector2( 616, 424 )
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Map"]
position = Vector2( 222.5, 4 )
shape = SubResource( 6 )

[node name="Map_Interactable" type="Sprite" parent="Map"]
position = Vector2( 347, 115 )
texture = ExtResource( 16 )

[node name="QuestionMark" type="Sprite" parent="Map"]
position = Vector2( 224, -157 )
texture = ExtResource( 15 )

[node name="Mirror" type="Area2D" parent="."]
position = Vector2( 2111, 586 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Mirror"]
position = Vector2( -63, 48.75 )
shape = SubResource( 8 )

[node name="QuestionMark" type="Sprite" parent="Mirror"]
position = Vector2( -74, -469 )
texture = ExtResource( 15 )

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 1117, 729 )

[node name="HUD" parent="player" instance=ExtResource( 3 )]
position = Vector2( 0, 7.60333 )
limit_left = 0
limit_top = 0
limit_right = 2225
limit_bottom = 0

[node name="rightBoundary" type="StaticBody2D" parent="."]
position = Vector2( 1941, 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="rightBoundary"]
position = Vector2( 296, 533 )
shape = SubResource( 2 )

[node name="leftBoundary" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftBoundary"]
position = Vector2( -4, 532.5 )
shape = SubResource( 2 )

[node name="DormAudio" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
position = Vector2( 980, 566 )
stream = ExtResource( 13 )

[connection signal="body_entered" from="OtherBed" to="OtherBed" method="_on_Bed_body_entered"]
[connection signal="body_exited" from="OtherBed" to="OtherBed" method="_on_Bed_body_exited"]
[connection signal="body_entered" from="Bed" to="Bed" method="_on_Bed_body_entered"]
[connection signal="body_exited" from="Bed" to="Bed" method="_on_Bed_body_exited"]
[connection signal="body_entered" from="Map" to="Map" method="_on_Map1_body_entered"]
[connection signal="body_exited" from="Map" to="Map" method="_on_Map1_body_exited"]
[connection signal="body_entered" from="Mirror" to="Mirror" method="_on_Mirror_body_entered"]
[connection signal="body_exited" from="Mirror" to="Mirror" method="_on_Mirror_body_exited"]
